k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytebattle-frontend
  namespace: bytebattle
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lockin.tn
        - www.lockin.tn
      secretName: lockin-tls
  rules:
    - host: lockin.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bytebattle-frontend
                port:
                  number: 80
    - host: www.lockin.tn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bytebattle-frontend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bytebattle-backend
  namespace: bytebattle
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: lockin.tn
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bytebattle-backend
                port:
                  number: 3000
    - host: www.lockin.tn
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: bytebattle-backend
                port:
                  number: 3000
